@@ -146,7 +146,7 @@ public class CompanyHolidayService implements PaginatedAndSortedService<CompanyH
             repository.saveAll(entities);
         } catch (RuntimeException e) {
             String errorMessage = String.format("Failed to save holiday for company [%s]",
-                    entities.get(0).getCompany().getCode());
+                    entities.getFirst().getCompany().getCode());
             throw new LnFException(errorMessage);
         }
     }
